--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "2",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
