--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "google-fonts-webpack-plugin": "^0.4.4",
     "vue": "^2.6.11",
+    "vue-loading-skeleton": "^1.1.9",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
