--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "2",
+    "@inotom/vue-go-top": "^1.3.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "google-fonts-webpack-plugin": "^0.4.4",
