--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "core-js": "^3.6.5",
     "google-fonts-webpack-plugin": "^0.4.4",
     "lodash": "^4.17.20",
+    "simple-keyboard": "^2.30.17",
     "v-hotkey": "^0.8.0",
     "vue": "^2.6.11",
     "vue-loading-skeleton": "^1.1.9",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
